# docs/swagger.json
@@ -205,7 +205,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.LoginRequest"
+                            "$ref": "#/definitions/request.LoginRequest"
                         }
                     }
                 ],
@@ -263,7 +263,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.RegisterRequest"
+                            "$ref": "#/definitions/request.RegisterRequest"
                         }
                     }
                 ],
@@ -392,7 +392,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdateUserRequest"
+                            "$ref": "#/definitions/request.UpdateUserRequest"
                         }
                     }
                 ],
@@ -601,7 +601,34 @@
                 }
             }
         },
-        "model.LoginRequest": {
+        "model.User": {
+            "description": "User model",
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.LoginRequest": {
             "description": "Login request",
             "type": "object",
             "required": [
@@ -619,7 +646,7 @@
                 }
             }
         },
-        "model.RegisterRequest": {
+        "request.RegisterRequest": {
             "description": "User registration request",
             "type": "object",
             "required": [
@@ -656,7 +683,7 @@
                 }
             }
         },
-        "model.UpdateUserRequest": {
+        "request.UpdateUserRequest": {
             "description": "User update request",
             "type": "object",
             "required": [
@@ -685,32 +712,6 @@
                 "username": {
                     "type": "string",
                     "example": "john_doe"
-                }
-            }
-        },
-        "model.User": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "full_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "role": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
